SFDC Automation/src/objects/UVS_Vehicle_Information__c.object
<CustomObject>
    <description>UVS Buy-Out Calculation</description>
    <fields>
        <fullName>Amount_Due_w_o_applicable_fees__c</fullName>
        <formula>SheduleA_Value_at_Anniversary_Date__c + Total_SheduleA_Fixed_Rate__c + Pre_Paid_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due (w/o applicable fees)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book_Value__c</fullName>
        <label>Book Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buy_Out_Date__c</fullName>
        <label>Buy-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gains_Losses__c</fullName>
        <formula>SheduleA_Value_at_Anniversary_Date__c  -  Book_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gains/Losses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Service__c</fullName>
        <formula>Vehicle_Number__r.In_Service_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Term__c</fullName>
        <label>Lease Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Code</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>Vehicles Information</relationshipLabel>
        <relationshipName>Vehicles_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Months_Inservice__c</fullName>
        <formula>IF(NOT(ISBLANK( In_Service__c)), 

((YEAR ( Buy_Out_Date__c ) - YEAR ( In_Service__c ))*12+ 
(MONTH( Buy_Out_Date__c ) - MONTH( In_Service__c))), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months Inservice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mths_btw_Anniversary_Buy_Out_Date__c</fullName>
        <formula>IF(NOT(ISBLANK( In_Service__c)), 

((YEAR ( Anniversary_Date__c ) - YEAR ( Buy_Out_Date__c ))*12+ 
(MONTH (Anniversary_Date__c ) - MONTH( Buy_Out_Date__c ))), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mths btw Anniversary &amp; Buy-Out Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mths_in_service_to_Anniversary_Date__c</fullName>
        <formula>IF(NOT(ISBLANK( In_Service__c )), 

((YEAR (Anniversary_Date__c) - YEAR ( In_Service__c  ))*12+ 
(MONTH (Anniversary_Date__c) - MONTH( In_Service__c ))), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mths in-service to Anniversary Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <formula>Vehicle_Number__r.CUSTOMER_BRANCH__r.Ryder_Branch__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Paid_Interest__c</fullName>
        <label>Pre-Paid Interest</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotional_Insentive_Fee__c</fullName>
        <label>Promotional Incentive Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScheduleA_Monthly_Depreciation__c</fullName>
        <label>ScheduleA Monthly Depreciation</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScheduleA_Monthly_Fixed_Rate__c</fullName>
        <label>ScheduleA Monthly Fixed Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScheduleA_Original_Value__c</fullName>
        <label>ScheduleA Original Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScheduleA_Request__c</fullName>
        <label>ScheduleA Request</label>
        <referenceTo>UVS_SheduleA_Request__c</referenceTo>
        <relationshipLabel>Vehicle_Information</relationshipLabel>
        <relationshipName>Vehicle_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ScheduleA_Value__c</fullName>
        <formula>ScheduleA_Original_Value__c -( ScheduleA_Monthly_Depreciation__c * Months_Inservice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ScheduleA Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SheduleA_Value_at_Anniversary_Date__c</fullName>
        <formula>ScheduleA_Original_Value__c  -
(ScheduleA_Monthly_Depreciation__c * Mths_in_service_to_Anniversary_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SheduleA Value at Anniversary Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Purchase_Price__c</fullName>
        <formula>SheduleA_Value_at_Anniversary_Date__c  + Sales_Tax__c + Unexpired_License__c + Pre_Paid_Interest__c +  Promotional_Insentive_Fee__c +  Total_SheduleA_Fixed_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_SheduleA_Fixed_Rate__c</fullName>
        <formula>Mths_btw_Anniversary_Buy_Out_Date__c * ScheduleA_Monthly_Fixed_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total SheduleA Fixed Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unexpired_License__c</fullName>
        <label>Unexpired License</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Number</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicles Information</relationshipLabel>
        <relationshipName>Vehicles_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vehicle Information</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Vehicle Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>